--- a/assets/colors/R.css
+++ b/assets/colors/R.css
@@ -9,6 +9,9 @@ p,
 .g-production-preview__article:hover p {
     color: #4F3244;
 }
+.g-lang-change__item {
+    background: #EA5060;
+}
 
 h2, h2.h1,
 h3,
@@ -43,6 +46,9 @@ a.g-link--cta,
     color: #ffffff !important;
 }
 
+.g-nav {
+    background-color: #EA5060;
+}
 .g-nav ul.sub-menu {
     background-color: #EA5060;
     /* background-image: url(../img/svg/Menu_R.svg); */
@@ -55,7 +61,7 @@ footer {
 footer a, footer a:hover {
     color: #4F3244;
 }
-.g-production__image-wrapper:before,
+/*.g-production__image-wrapper:before,
 .g-production-preview__image:before {
     background-color: #4F3244;
-}
+}*/
