--- a/style.css
+++ b/style.css
@@ -836,7 +836,7 @@ input[type="email"] {
 #searchform label.screen-reader-text {
     display: none;
 }
-#searchform #s {
+#searchform #q {
     border: 1px solid #efefef;
     padding: 4px 8px;
     width: 110px;
