adjusted espace pro colors

--- a/assets/colors/G.css
+++ b/assets/colors/G.css
@@ -23,7 +23,7 @@ p.g-production-subtitle{
 a:hover {
     color: #4F3244;
 }
-a.g_espace-downloads-file,
+a.g-espace-downloads-file,
 a.g-espace-preview {
     background-color: #4F3244;
     color: #DDDE41;
