--- a/assets/colors/V.css
+++ b/assets/colors/V.css
@@ -28,7 +28,7 @@ a,
 a:hover {
     color: #EA5060;
 }
-a.g_espace-downloads-file,
+a.g-espace-downloads-file,
 a.g-espace-preview {
     background-color: #DDDE41;
     color: #4F3244;
