--- a/style.css
+++ b/style.css
@@ -1328,22 +1328,30 @@ a.g-espace-preview {
     color: white;
     text-decoration: none;
     max-width: 600px;
-    padding: 5px 40px 5px 5px;
+    padding: 10px 40px 10px 10px;
     font-weight: 100;
     margin-top: 10px;
 }
+a.g-espace-downloads-preview {
+    padding-right: 10px;
+}
 .g-espace-downloads-icon  {
     position: absolute;
-    top: 5px;
+    top: 10px;
     right: 10px;
     height: 30px;
+}
+a.g-espace-downloads-preview .g-espace-downloads-icon {
+    top: 20px;
+    right: 20px;
 }
 .g-espace-downloads-file-preview {
 
     position: static !important;
     display: block;
-    max-width: 300px;
     height: auto !important;
+    width: 100%;
+    padding-bottom: 10px;
 
 }
 a.g-espace-preview {
