added saison, fixed image background and responsive videos

--- a/assets/colors/R.css
+++ b/assets/colors/R.css
@@ -71,7 +71,9 @@ footer {
 footer a, footer a:hover {
     color: #4F3244;
 }
-/*.g-production__image-wrapper:before,
-.g-production-preview__image:before {
-    background-color: #4F3244;
-}*/
+.g-production__image-wrapper:before,
+.g-production-preview__image:before,
+.g-production__slideshow__image-wrapper:before,
+.g-espace-preview__image:before {
+    background-color: #733B56;
+}
